<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_bg_white"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_round_recta"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/txt_grpNo" />

            <EditText
                android:id="@+id/etx_stat_gid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <EditText
            android:id="@+id/etx_stat_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/txt_round_recta"
            android:ems="10"
            android:hint="@string/hint_title"
            android:maxLines="3"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etx_stat_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/txt_round_recta"
            android:drawableStart="@drawable/ic_code"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hint_language_used"
            android:maxLines="3"
            android:padding="10dp"
            android:textColor="@android:color/holo_purple" />

        <EditText
            android:id="@+id/etx_stat_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/txt_round_recta"
            android:drawableStart="@drawable/ic_members"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hint_members"
            android:maxLines="3"
            android:padding="10dp"
            android:textColor="@android:color/holo_green_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:background="@drawable/txt_round_recta"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/txt_status" />

            <Spinner
                android:id="@+id/spn_stat_stat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:entries="@array/spn_staus" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_update_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/button_update"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"
            android:text="@string/button_delete"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>