<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@android:color/transparent"
    android:foreground="@android:color/transparent"
    android:longClickable="true"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_bg_white_faded"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_card_gno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:text="@string/txt_card_gno"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/txt_card_projTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_card_gno"
            android:text="@string/demo_card_title"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txt_card_projTitle"
            android:layout_alignParentEnd="true"
            android:text="@string/text_card_status"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/txt_card_proLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt_card_gno"
            android:layout_below="@+id/txt_card_projTitle"
            android:text="@string/demo_card_proLang" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txt_card_projTitle"
            android:text="TextView" />
    </RelativeLayout>
</android.support.v7.widget.CardView>